@@ -52,6 +52,7 @@ Contributors:
     Michael Piszczek      (misc cleanup)
     Stewart Brodie        (bug fix: no fork mode failure reporting with teardowns)
     Michał Dębski         (Use mkstemp() if available instead of tmpfile() or tempnam())
+    Sebastian Dröge       (Kill running tests if SIGTERM or SIGINT are caught in test runner)
 
 Anybody who has contributed code to Check or Check's build system is
 considered an author.  Send patches to this file to 
